--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="./styles/global.css" />
 		<link rel="stylesheet" href="./styles/grid.css" />
 		<link rel="stylesheet" href="./styles/icons.css" />
+		<link rel="stylesheet" href="./styles/googlemap.css" />
 		<link rel="stylesheet" href="./styles/nav.css" />
 		<link rel="stylesheet" href="./styles/reviews.css" />
 		<link rel="stylesheet" href="./styles/sidbar.css" />
