--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
+		<link rel="stylesheet" href="./styles/burger.css" />
 		<link rel="stylesheet" href="./styles/buttons.css" />
 		<link rel="stylesheet" href="./styles/cards.css" />
 		<link rel="stylesheet" href="./styles/filters.css" />
