--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 			href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300&display=swap"
+			rel="stylesheet"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<script
