--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,22 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+		<!-- BOOTSTRAP -->
 		<link
-			href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap"
+			href="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 			rel="stylesheet"
 		/>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+		<!-- END BOOTSTRAP -->
+
+		<!-- FONTS -->
 		<link
-			href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300&display=swap"
+			href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat&display=swap"
 			rel="stylesheet"
 		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
-			rel="stylesheet"
-		/>
+		<!-- END FONTS -->
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<script
@@ -27,20 +31,9 @@
 		/>
 
 		<link rel="apple-touch-icon" href="logo192.png" />
-		<!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
 		<title>Happy Earth</title>
 	</head>
 	<body>
