add background, edit font, sizing, colors, spacing

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 		<!-- FONTS -->
 		<link
-			href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat&display=swap"
+			href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat|Fredericka+the+Great|Pacifico|Quicksand:400,700|Megrim|Happy+Monkey:400&display=swap"
 			rel="stylesheet"
 		/>
 		<!-- END FONTS -->
