--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,37 @@
       href="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="//unpkg.com/bootstrap-select@1.12.4/dist/css/bootstrap-select.min.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="//unpkg.com/bootstrap-select-country@4.0.0/dist/css/bootstrap-select-country.min.css"
+      type="text/css"
+    />
 
-    <!-- END BOOTSTRAP -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="//unpkg.com/bootstrap-select@1.12.4/dist/js/bootstrap-select.min.js"></script>
 
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat|Fredericka+the+Great|Pacifico|Quicksand:400,700|Open+Sans|Raleway|Megrim|Poppins:700|Happy+Monkey:400|Jost:400&display=swap"
       rel="stylesheet"
     />
-    <!-- END FONTS -->
 
     <script
       src="https://kit.fontawesome.com/02f3bcbffa.js"
       crossorigin="anonymous"
     ></script>
+
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
 
     <link rel="apple-touch-icon" href="logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Happy Earth</title>
@@ -40,15 +49,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
