fixed gallery back to initial design

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- FONTS -->
     <link
-      href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat|Fredericka+the+Great|Pacifico|Quicksand:400,700|Open+Sans|Raleway|Megrim|Poppins:700|Happy+Monkey:400|Jost:400&display=swap"
+      href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat|Nunito|Pacifico|Quicksand:400,700|Open+Sans|Raleway|Megrim|Poppins:700|Happy+Monkey:400|Jost:400&display=swap"
       rel="stylesheet"
     />
 
