--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
       content="Web site created using create-react-app"
     />
 
-    <!-- <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Happy Earth</title>
   </head>
